<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.nanodegree.myappportfolio.AppListActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="20dp"
            android:text="@string/my_apps"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_spotify_streamer"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@color/colorButtonNormal"
            android:text="@string/spotify_streamer"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_scores_app"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@color/colorButtonNormal"
            android:text="@string/scores_app"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_library_app"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@color/colorButtonNormal"
            android:text="@string/library_app"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_build_it_bigger"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@color/colorButtonNormal"
            android:text="@string/build_it_bigger"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_xyz_reader"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@color/colorButtonNormal"
            android:text="@string/xyz_reader"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_capstone_my_app"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:background="@color/colorButtonMyApp"
            android:text="@string/capstone_my_app"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>


</ScrollView>
